--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 			<input type = "text" ng-model = "second" />
 
 			<button ng-click = "updateValue()">Sum</button>
+			<button ng-click = "database()">Database</button>
 			<br><br>
 
 			{{calculation}}
