--- a/client/index.html
+++ b/client/index.html
@@ -1,29 +1,35 @@
 <html ng-app = "app1" ng-init = "person = {fName: 'Yanning', lName: 'Liu'}; capitals = [{city: 'Montgomery', state: 'Alabama'}, {city: 'Juneau', state: 'Alaska'}, {city: 'Phoenix', state: 'Arizona'}]">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<head>
 		<title>AngularJS Calculator</title>
 	</head>
 
 	<body>
-      <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-	    <script src="calculator.js"></script>
+	 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      	<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+      	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	  	<script src="calculator.js"></script>
 
-		<div ng-controller="ctrl1">
+	  	<div ng-controller="ctrl1">
 
-      <h2>Welcome {{person.fName + ' ' + person.lName}}</h2>
-			<span>Values:</span>
-			<input type = "text" ng-model = "first" />
-			<input type = "text" ng-model = "second" />
+	  		<div class="container-fluid">
+	      		<h2>Welcome {{person.fName + ' ' + person.lName}}</h2>
+	      	
+				<span>Values:</span>
+				<input type = "text" ng-model = "first" />
+				<input type = "text" ng-model = "second" />
 
-			<button ng-click = "updateValue()">Sum</button>
-			<input type = "button" value = "Database" onClick="database()">
-			<br><br>
+				<button ng-click = "updateValue()" class="btn btn-info">Sum</button>
+				<input type = "button" class = "btn btn-success" value = "Database" onClick="database()">
+				<br><br>
 
-			{{calculation}}
+				{{calculation}}
 
-			<p>Your first value is {{first}}</p>
-			<p>Your second value is {{second}}</p>
-		</div>
+				<p>Your first value is {{first}}</p>
+				<p>Your second value is {{second}}</p>
+			</div>
+	  	</div>
 
 	</body>
 
