--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
 	</head>
 
 	<body>
-	 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	 	<link rel="stylesheet" href="./bootstrap.min.css">
       	<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-      	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      	<script src="./bootstrap.min.js"></script>
 	  	<script src="calculator.js"></script>
 
 	  	<div ng-controller="ctrl1">
